Project Desserted {
  Note: 'Database schema for the Desserted card game'
}

Table users {
  id BigSerial [pk]
  username Varchar(255) [unique, not null]
  email Varchar(255) [unique, not null]
  password Bytea [not null]
  password_changed_at Timestamptz [not null, default: '0001-01-01 00:00:00']
  created_at Timestamptz [not null, default: `now()`]
  total_score Int [default: 0]
  total_wins Int [default: 0]
  total_losses Int [default: 0]
  Note: '"users" Stores user account information'
  Indexes {
    (username) [name: 'idx_user_username']
  }
}

Table games {
  game_id Serial [pk]
  status Varchar(50) [not null, default: 'active']
  created_by Bigint [not null, ref: > users.id]
  start_time Timestamp [not null, default: `now()`]
  end_time Timestamp
  Note: '"games" Represents a game session'
  Indexes {
    (status) [name: 'idx_games_status']
  }
}

Table player_game {
  player_game_id Serial [pk]
  player_id Bigint [not null, ref: > users.id]
  game_id Int [not null, ref: > games.game_id]
  player_score Int [default: 0]
  player_status Varchar(50) [default: 'active']
  hand_cards Text
  played_cards Text
  Note: '"player_game" Associates users with their game sessions and tracks their progress'
  Indexes {
    (player_id) [name: 'idx_playergame_player_id']
    (game_id) [name: 'idx_playergame_game_id']
  }
}

Table cards {
  card_id BigSerial [pk]
  type Varchar [not null]
  name Varchar [not null]
  Note: '"cards" Details of each card used in the game'
}

Table desserts {
  dessert_id Serial [pk]
  name Text [not null]
  points Int [not null]
}

Table player_hand {
  player_hand_id Serial [pk]
  player_game_id Int [not null, ref: > player_game.player_game_id]
  card_id Bigint [not null, ref: > cards.card_id]
}

Table played_cards {
  played_card_id Serial [pk]
  player_game_id Int [not null, ref: > player_game.player_game_id]
  card_id Bigint [not null, ref: > cards.card_id]
  play_time Timestamp [not null, default: `now()`]
}

Table dessert_played {
  dessert_played_id Serial [pk]
  player_game_id Int [not null, ref: > player_game.player_game_id]
  dessert_id Int [not null, ref: > desserts.dessert_id]
  icon_path Varchar(255)
  timestamp Timestamp [not null, default: `now()`]
  Indexes {
    (timestamp) [name: 'idx_dessertplayed_timestamp']
  }
}